877 Fix z-index; was blocking the user menu

--- a/src/scss/module/_sticky-menu.scss
+++ b/src/scss/module/_sticky-menu.scss
@@ -73,5 +73,5 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 999;
+  z-index: 8;
 }
